# ti-radar

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: backend.yml  docker.yml  frontend.yml
docs/: api-reference.md  architecture.md  data-model.md  setup.md  user-stories.md
docs/plans/: 2026-02-18-uc-evolution-design.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ActorTable.jsx  AnalysisText.jsx  ChartTooltip.jsx  ChordDiagram.jsx  CompetitivePanel.jsx  CpcFlowPanel.jsx  DownloadButton.jsx  ExplainabilityBar.jsx  ForceGraph.jsx  FullscreenButton.jsx  FundingPanel.jsx  GeographicPanel.jsx  LandscapePanel.jsx  MaturityPanel.jsx  MetricCard.jsx  RadarGrid.jsx  ResearchImpactPanel.jsx  (+3 more)
scripts/: _check_migration_status.py  create_kanban_issues.ps1  create_kanban_issues.sh  create_mini_db.py  import_cordis_bulk.py  import_epo_bulk.py  migrate_applicants.py  migrate_cpc.py  test_api_keys.py
src/ti_radar/: app.py  config.py
tests/integration/: test_api.py  test_repositories.py
tests/unit/: test_analysis_text.py  test_api_health.py  test_competitive.py  test_cpc_descriptions.py  test_cpc_flow.py  test_geographic.py  test_gleif_adapter.py  test_metrics.py  test_openaire_adapter.py  test_research_impact.py  test_sampling.py  test_schemas.py  test_scurve.py  test_semantic_scholar_adapter.py  test_suggestions.py  test_temporal.py
(+32 files in other folders)
